# whisper

./: .gitattributes  .gitignore  .taplo.toml  mise.toml  pyproject.toml
transcribe/: __init__.py  __main__.py  cli.py  device.py  diarizer.py  download.py  logging.py  pipeline.py  processing.py  transcriber.py
